# ray_tracing

./: .gitignore  Cargo.toml  config.toml  main.rs
benches/: my_benchmark.rs
src/: bounding_box.rs  bvh.rs  camera.rs  checker_texture.rs  colour.rs  geometry.rs  gradient_texture.rs  hittable.rs  interval.rs  lib.rs  main.rs  material.rs  perlin.rs  perlin_texture.rs  ray.rs  solid_texture.rs  sphere.rs  stripe_texture.rs  texture.rs  triangle.rs  vector.rs
src/file_utils/: clean_scenes.rs  mod.rs
src/geometry/: ray.rs  vector.rs
src/hittables/: bounding_box.rs  bvh.rs  hittable.rs  mod.rs  solid_sphere.rs  sphere.rs  triangle.rs
src/scene_reader/: material_parser.rs  mod.rs  object_parser.rs  reader.rs  row_parser.rs  scene_parser.rs  texture_parser.rs
src/textures/: checker_texture.rs  gradient_texture.rs  material.rs  mod.rs  perlin_texture.rs  solid_texture.rs  stripe_texture.rs  texture.rs
