[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
collar = "1.0.1"
derive_more = { version = "2.0.1", features = [
    "constructor",
    "add",
    "add_assign",
    "mul",
    "mul_assign",
    "sum",
    "not",
    "deref",
    "display"
] }
glam = "0.30.5"
image = "0.25.6"
rand = "0.9.2"
rand_distr = "0.5.1" 
rayon = "1.11.0"

[profile.release]
lto = true
rpath = false
strip = true
