[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", default-features = false, features = [
    "std",
    "derive",
] }
collar = "1.0.1"
derive_more = { version = "2.0.1", features = [
    "constructor",
    "add",
    "add_assign",
    "mul",
    "mul_assign",
    "sum",
    "not",
    "deref",
    "display",
] }
glam = "0.30.5"
image = { version = "0.25.6", default-features = false, features = ["png", "rayon"] }
rand = { version = "0.9.2", default-features = false, features = [
    "std",
    "thread_rng",
] }
rand_distr = "0.5.1"
rayon = "1.11.0"

[profile.release]
lto = "thin"
rpath = false
strip = true
incremental = true